example 2 works firebase api auth v9

--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
   },
   "type": "module",
   "dependencies": {
-    "firebase": "^9.6.2",
-    "firebaseui": "^6.0.0"
+    "firebase": "^9.4.1"
   }
 }
